<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/activity_view"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/images_view"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.PicturesActivity">

        <FrameLayout
            android:background="@color/white"
            android:elevation="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            tools:ignore="UnusedAttribute">

            <TextView
                android:drawableEnd="@drawable/ic_keyboard_arrow_down_24dp"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_down_24dp"
                android:gravity="center_vertical|end"
                android:id="@+id/sort_mode_button"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                tools:text="New" />
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/gridview"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />
    </LinearLayout>

    <include
        android:id="@+id/sort_mode_picker"
        layout="@layout/image_sort_options_view" />

    <FrameLayout
        android:background="#88FFFFFF"
        android:id="@+id/loading_view"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:visibility="gone">

        <include layout="@layout/loading_spinner" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/error_view"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:contentDescription="@string/error_content_description"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-48dp"
            android:layout_width="wrap_content"
            android:src="@drawable/error_image" />

        <TextView
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="16dp"
            android:text="@string/error_description"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:background="@color/colorPrimary"
            android:id="@+id/retry_btn"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/retry_prompt"
            android:textColor="@color/white" />
    </LinearLayout>

</FrameLayout>